--- a/views/index.html
+++ b/views/index.html
@@ -35,7 +35,6 @@
         <button type="button" class="close" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-
       </li>
       <li class="list-group-item d-flex justify-content-between align-items-center">
         task2 dfasdf asdf asdfasdfasdfsa saf fasfsd f asdf asdf asdfas fadsfsd
@@ -61,6 +60,7 @@
     crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
+  <script src="../public/javascripts/main.js"></script>
 </body>
 
 </html>
