--- a/views/index.html
+++ b/views/index.html
@@ -29,7 +29,7 @@
       <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="0"
         aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
     </div>
-    <ul class="list-group">
+    <ul class="list-group mb-2">
       <li class="list-group-item d-flex justify-content-between align-items-center">
         task1
         <button type="button" class="close" aria-label="Close">
