--- a/views/index.html
+++ b/views/index.html
@@ -31,19 +31,19 @@
     </div>
     <ul class="list-group mb-2">
       <li class="list-group-item d-flex justify-content-between align-items-center">
-        task1
+        <p>task1</p>
         <button type="button" class="close" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </li>
       <li class="list-group-item d-flex justify-content-between align-items-center">
-        task2 dfasdf asdf asdfasdfasdfsa saf fasfsd f asdf asdf asdfas fadsfsd
+        <p>task2 dfasdf asdf asdfasdfasdfsa saf fasfsd f asdf asdf asdfas fadsfsd</p>
         <button type="button" class="close" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </li>
       <li class="list-group-item d-flex justify-content-between align-items-center">
-        task3
+        <p>task3</p>
         <button type="button" class="close" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
