added animation when task is removed

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -13,6 +13,8 @@ ul > li {
   user-select: none; }
   ul > li p {
     margin: 0; }
+  ul > li.to-remove {
+    opacity: 0; }
 
 .checked {
   -webkit-text-decoration-line: line-through !important;
