--- a/views/index.html
+++ b/views/index.html
@@ -25,7 +25,7 @@
         <button class="btn btn-secondary" type="button" id="button-add-task">Add</button>
       </div>
     </div>
-    <div class="progress">
+    <div class="progress mb-1">
       <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="0"
         aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
     </div>
