added animation when adding new task

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,6 +15,8 @@ ul > li {
     margin: 0; }
   ul > li.to-remove {
     opacity: 0; }
+  ul > li.new-task {
+    opacity: 0; }
 
 .checked {
   -webkit-text-decoration-line: line-through !important;
