--- a/views/index.html
+++ b/views/index.html
@@ -6,7 +6,9 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+  <!-- Fonts -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+    crossorigin="anonymous">
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
@@ -15,7 +17,19 @@
 
 <body>
   <header>
-    <h1 contenteditable="true" class="text-center">Task list</h1>
+    <h1 class="text-center" id="task-list-title">Task list</h1>
+    <div class="btn-group dropleft bb">
+      <button type="button" class="btn btn-secondary" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <i class="fas fa-cog" aria-hidden="true"></i>
+      </button>
+      <div class="dropdown-menu">
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item" id="change-title">Change task list title</li>
+          <li class="list-group-item" id="remove-all">Remove all tasks</li>
+          <li class="list-group-item" id="remove-done">Remove done tasks</li>
+        </ul>
+      </div>
+    </div>
   </header>
   <div class="container">
     <div class="input-group mb-3">
@@ -29,7 +43,7 @@
       <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="0"
         aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
     </div>
-    <ul class="list-group mb-2">
+    <ul class="list-group mb-2" id="tasks-list">
     </ul>
   </div>
 
