--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,7 @@
 <body>
   <header>
     <h1 class="text-center" id="task-list-title">Task list</h1>
-    <div class="btn-group dropleft bb">
+    <div class="btn-group dropleft setting-box">
       <button type="button" class="btn btn-secondary" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <i class="fas fa-cog" aria-hidden="true"></i>
       </button>
