--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,6 +8,9 @@ h1 {
   position: absolute;
   top: .4em;
   right: .4em; }
+  .setting-box button {
+    width: 2.625em;
+    height: 2.375em; }
 
 .progress {
   height: 0.5em; }
