--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -13,6 +13,10 @@ h1 {
     position: absolute;
     top: .4em;
     right: .4em;
+    button {
+        width: 2.625em;
+        height: 2.375em;
+    }
 }
 
 .progress {
