stoped header from floating when title is empty

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,7 +2,8 @@ header {
   position: relative; }
 
 h1 {
-  border-bottom: 4px solid black; }
+  border-bottom: 4px solid black;
+  min-height: 1.4em; }
 
 .setting-box {
   position: absolute;
