use js to display example title

--- a/views/index.html
+++ b/views/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <header>
-    <h1 class="text-center" id="task-list-title">Task list</h1>
+    <h1 class="text-center" id="task-list-title"></h1>
     <div class="btn-group dropleft setting-box">
       <button type="button" class="btn btn-secondary rounded" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         <i class="fas fa-cog" aria-hidden="true"></i>
