padding for h1,  remove one class from button, spelling

--- a/views/index.html
+++ b/views/index.html
@@ -17,9 +17,9 @@
 
 <body>
   <header>
-    <h1 class="text-center" id="task-list-title"></h1>
+    <h1 class="text-center py-4 px-2" id="task-list-title"></h1>
     <div class="btn-group dropleft setting-box">
-      <button type="button" class="btn btn-secondary rounded" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <button type="button" class="btn rounded" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"  aria-label="Settings">
         <i class="fas fa-cog" aria-hidden="true"></i>
       </button>
       <div class="dropdown-menu">
@@ -56,7 +56,7 @@
     </div>
   <div class="container">
     <div class="input-group mb-3">
-      <input type="text" class="form-control" name="task" id="task" placeholder="Type your task here..." aria-label="Type your task here"
+      <input type="text" class="form-control" name="task" id="task" placeholder="Type Your task here..." aria-label="Type your task here"
         aria-describedby="button-add-task">
       <div class="input-group-append">
         <button class="btn btn-secondary" type="button" id="button-add-task">Add</button>
