--- a/views/index.html
+++ b/views/index.html
@@ -29,9 +29,10 @@
           <li class="list-group-item" id="change-title" data-toggle="modal" data-target="#change-task-list-title">Change
             task list title</li>
           <li class="list-group-item" id="remove-all">Remove all tasks</li>
-          <li class="list-group-item" id="remove-done">Remove done tasks</li>
+          <li class="list-group-item text-success" id="remove-done">Remove done tasks</li>
           <li class="list-group-item" data-toggle="modal" data-target="#uploadFile">Upload Task List from file</li>
           <li class="list-group-item" id="save-tasks">Save Task List to file</li>
+          <li class="list-group-item text-danger" id="reset-all">Hard reset - clear all </li>
         </ul>
       </div>
     </div>
