remove class for dropdown menu list, added dropdown-item class

--- a/views/index.html
+++ b/views/index.html
@@ -25,14 +25,14 @@
         <i class="fas fa-cog" aria-hidden="true"></i>
       </button>
       <div class="dropdown-menu">
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item" id="change-title" data-toggle="modal" data-target="#change-task-list-title">Change
+        <ul class="list-group">
+          <li class="list-group-item dropdown-item" id="change-title" data-toggle="modal" data-target="#change-task-list-title">Change
             task list title</li>
-          <li class="list-group-item" id="remove-all">Remove all tasks</li>
-          <li class="list-group-item text-success" id="remove-done">Remove done tasks</li>
-          <li class="list-group-item" data-toggle="modal" data-target="#uploadFile">Upload Task List from file</li>
-          <li class="list-group-item" id="save-tasks">Save Task List to file</li>
-          <li class="list-group-item text-danger" id="reset-all">Hard reset - clear all </li>
+          <li class="list-group-item dropdown-item" id="remove-all">Remove all tasks</li>
+          <li class="list-group-item dropdown-item text-success" id="remove-done">Remove done tasks</li>
+          <li class="list-group-item dropdown-item" data-toggle="modal" data-target="#uploadFile">Upload Task List from file</li>
+          <li class="list-group-item dropdown-item" id="save-tasks">Save Task List to file</li>
+          <li class="list-group-item dropdown-item text-danger" id="reset-all">Hard reset - clear all </li>
         </ul>
       </div>
     </div>
