alert when file is incorrect

--- a/views/index.html
+++ b/views/index.html
@@ -83,6 +83,13 @@
     </div>
   </div>
 
+  <div class="alert alert-danger alert-dismissible fade" role="alert">
+    <strong>Error:</strong> Incorrect file!
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  
   <div class="container">
     <div class="input-group mb-3">
       <input type="text" class="form-control" name="task" id="task" placeholder="Type Your task here..." aria-label="Type your task here"
