--- a/views/index.html
+++ b/views/index.html
@@ -30,7 +30,8 @@
             task list title</li>
           <li class="list-group-item dropdown-item" id="remove-all">Remove all tasks</li>
           <li class="list-group-item dropdown-item text-success" id="remove-done">Remove done tasks</li>
-          <li class="list-group-item dropdown-item" data-toggle="modal" data-target="#uploadFile">Upload Task List from file</li>
+          <li class="list-group-item dropdown-item" data-toggle="modal" data-target="#uploadFile">Upload Task List from
+            file</li>
           <li class="list-group-item dropdown-item" id="save-tasks">Save Task List to file</li>
           <li class="list-group-item dropdown-item text-danger" id="reset-all">Hard reset - clear all </li>
         </ul>
@@ -63,7 +64,8 @@
     </div>
   </div>
 
-  <div class="modal fade" id="uploadFile" tabindex="-1" role="dialog" aria-labelledby="Upload task list file" aria-hidden="true">
+  <div class="modal fade" id="uploadFile" tabindex="-1" role="dialog" aria-labelledby="Upload task list file"
+    aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -89,7 +91,7 @@
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
-  
+
   <div class="container">
     <div class="input-group mb-3">
       <input type="text" class="form-control" name="task" id="task" placeholder="Type Your task here..." aria-label="Type your task here"
