--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -22,6 +22,19 @@ h1 {
   .setting-box div.dropdown-menu {
     padding: 0; }
 
+.error {
+  position: absolute;
+  display: none;
+  z-index: 1000;
+  width: 100%;
+  height: 5em;
+  text-align: center;
+  background-color: #f2f2f2;
+  padding: 1.5em; }
+
+.show {
+  display: inline; }
+
 .progress {
   height: 0.5em; }
 
