--- a/views/index.html
+++ b/views/index.html
@@ -39,6 +39,8 @@
     </div>
   </header>
 
+  <div class="alert alert-danger error" role="alert"></div>
+
   <div class="modal fade" id="change-task-list-title" tabindex="-1" role="dialog" aria-labelledby="changing-title"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -83,13 +85,6 @@
         </div>
       </div>
     </div>
-  </div>
-
-  <div class="alert alert-danger alert-dismissible fade" role="alert">
-    <strong>Error:</strong> Incorrect file!
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-      <span aria-hidden="true">&times;</span>
-    </button>
   </div>
 
   <div class="container">
