--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,13 +1,13 @@
 body {
   font-family: 'Open Sans', sans-serif; }
-
 header {
   position: relative; }
 
 h1 {
   border-bottom: 4px solid black;
   min-height: 2.5em;
-  word-break: break-word; }
+  word-break: break-word;
+  text-shadow: 1.5px 1.3px 4px rgba(0, 0, 0, 0.3); }
 
 .setting-box {
   position: absolute;
@@ -35,8 +35,18 @@ h1 {
 .show {
   display: inline; }
 
+input[type=text] {
+  -webkit-box-shadow: inset 0.0275em 0.0325em 0.4125em -0.045em rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0.0275em 0.0325em 0.4125em -0.045em rgba(0, 0, 0, 0.3); }
+
 .progress {
-  height: 0.5em; }
+  height: 0.5em;
+  -webkit-box-shadow: inset 0.0275em 0.0325em 0.4125em -0.045em rgba(0, 0, 0, 0.3);
+  box-shadow: inset 0.0275em 0.0325em 0.4125em -0.045em rgba(0, 0, 0, 0.3); }
+
+.btn:not(:disabled):not(.disabled) {
+  -webkit-box-shadow: 0em 0em 0.1125em 0.025em rgba(0, 0, 0, 0.3);
+  box-shadow: 0em 0em 0.1125em 0.025em rgba(0, 0, 0, 0.3); }
 
 ul > li {
   -webkit-transition-duration: 600ms;
