added rounded class to ul

--- a/views/index.html
+++ b/views/index.html
@@ -25,7 +25,7 @@
         <i class="fas fa-cog" aria-hidden="true"></i>
       </button>
       <div class="dropdown-menu">
-        <ul class="list-group">
+        <ul class="list-group rounded">
           <li class="list-group-item dropdown-item" id="change-title" data-toggle="modal" data-target="#change-task-list-title">Change
             task list title</li>
           <li class="list-group-item dropdown-item" id="remove-all">Remove all tasks</li>
@@ -99,7 +99,7 @@
       <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="0"
         aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
     </div>
-    <ul class="list-group mb-2" id="tasks-list">
+    <ul class="list-group mb-2 rounded" id="tasks-list">
     </ul>
   </div>
   <!-- Optional JavaScript -->
