--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: 'Open Sans', sans-serif;
-  background-color: lightyellow; }
+  background-color: #ffffe0; }
 
 header {
   position: relative; }
