manifest, description, favicons, service worker

--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,9 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="theme-color" content="#ffffe0"/>
+  <meta name="Description" content="Task list for better organization and increased productivity!">
+  <link rel="manifest" href="manifest.webmanifest">
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
@@ -14,6 +17,28 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
     crossorigin="anonymous">
   <link rel="stylesheet" href="../public/stylesheets/style.css">
+  <!-- ****** faviconit.com favicons ****** -->
+	<link rel="shortcut icon" href="../public/images/icons/favicon.ico">
+	<link rel="icon" sizes="16x16 32x32 64x64" href="/favicon.ico">
+	<link rel="icon" type="image/png" sizes="196x196" href="../public/images/icons/favicon-192.png">
+	<link rel="icon" type="image/png" sizes="160x160" href="../public/images/icons/favicon-160.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="../public/images/icons/favicon-96.png">
+	<link rel="icon" type="image/png" sizes="64x64" href="../public/images/icons/favicon-64.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="../public/images/icons/favicon-32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="../public/images/icons/favicon-16.png">
+	<link rel="apple-touch-icon" href="../public/images/icons/favicon-57.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="../public/images/icons/favicon-114.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="../public/images/icons/favicon-72.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="../public/images/icons/favicon-144.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="../public/images/icons/favicon-60.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="../public/images/icons/favicon-120.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="../public/images/icons/favicon-76.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="../public/images/icons/favicon-152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="../public/images/icons/favicon-180.png">
+	<meta name="msapplication-TileColor" content="#FFFFFF">
+	<meta name="msapplication-TileImage" content="../public/images/icons/favicon-144.png">
+	<meta name="msapplication-config" content="../public/images/icons/browserconfig.xml">
+	<!-- ****** faviconit.com favicons ****** -->
 </head>
 
 <body>
@@ -111,6 +136,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
   <script src="../public/javascripts/main.js"></script>
+  <script src="../public/javascripts/for-sw.js"></script>
 </body>
 
 </html>
