--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,9 +7,13 @@ header {
 
 h1 {
   border-bottom: 4px solid black;
-  min-height: 2.5em;
+  min-height: 1.9em;
   word-break: break-word;
   text-shadow: 1.5px 1.3px 4px rgba(0, 0, 0, 0.3); }
+
+.navbar-collapse {
+  -webkit-box-shadow: 0em 0em 0.5125em 0.125em rgba(0, 0, 0, 0.3);
+  box-shadow: 0em 0em 0.5125em 0.125em rgba(0, 0, 0, 0.3); }
 
 .setting-box {
   position: absolute;
@@ -56,7 +60,8 @@ ul > li {
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
-  user-select: none; }
+  user-select: none;
+  text-align: center; }
   ul > li p {
     margin: 0;
     word-break: break-word; }
