--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,6 +11,16 @@ h1 {
   word-break: break-word;
   text-shadow: 1.5px 1.3px 4px rgba(0, 0, 0, 0.3); }
 
+.navbar {
+  position: absolute;
+  top: 0.4em;
+  right: 0;
+  z-index: 4; }
+  .navbar button {
+    width: 2.625em;
+    height: 2.375em;
+    background-color: rgba(0, 0, 0, 0.05); }
+
 .navbar-collapse {
   -webkit-box-shadow: 0em 0em 0.5125em 0.125em rgba(0, 0, 0, 0.3);
   box-shadow: 0em 0em 0.5125em 0.125em rgba(0, 0, 0, 0.3); }
