multiple task lists

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,10 +16,14 @@ h1 {
   top: 0.4em;
   right: 0;
   z-index: 4; }
-  .navbar button {
+  .navbar button:first {
     width: 2.625em;
     height: 2.375em;
     background-color: rgba(0, 0, 0, 0.05); }
+  .navbar span#current-title {
+    padding: 0.4em;
+    width: 7em;
+    overflow: auto; }
 
 .navbar-collapse {
   -webkit-box-shadow: 0em 0em 0.5125em 0.125em rgba(0, 0, 0, 0.3);
