--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -22,38 +22,27 @@ h1 {
     top: 0.4em;
     right: 0;
     z-index: 4;
-    button:first {
-        width: 2.625em;
-        height: 2.375em;
-        background-color: transparentize($main, $amount: .95);
-    }
-    span#current-title {
-        padding: 0.4em;
-        width: 7em;
-        overflow: auto;
-    }
-}
-
-.navbar-collapse {
-    @include boxshadow($blur: 0.5125em, $spread: 0.125em);
-}
-
-.setting-box {
-    position: absolute;
-    top: .4em;
-    right: .4em;
     button {
         width: 2.625em;
         height: 2.375em;
         background-color: transparentize($main, $amount: .95);
+        &:hover, &:focus {
+            background-color: transparentize($main, $amount: .65);
+        }
     }
-    ul {
-        text-align: center;
-    }
-    div.dropdown-menu{
-        padding: 0;
+    .navbar-collapse {
+        width: 11em;
+        @include boxshadow($blur: 0.5125em, $spread: 0.125em);
+        .navbar-nav .dropdown-menu {
+            text-align: center;
+            li.dropdown-item {
+                white-space: normal;
+                word-break: break-word;
+            }
+        }
     }
 }
+
 .error {
     position: absolute;
     display: none;
