--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,10 @@
 body {
   font-family: 'Open Sans', sans-serif;
-  background-color: #ffffe0; }
+  background-color: #ffffe0;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
 
 header {
   position: relative; }
@@ -61,10 +65,6 @@ input[type=text] {
 ul > li {
   -webkit-transition-duration: 600ms;
   transition-duration: 600ms;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
   text-align: center; }
   ul > li p {
     margin: 0;
