--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -38,18 +38,8 @@ h1 {
         white-space: normal;
         word-break: break-word; }
 
-.error {
-  position: absolute;
-  display: none;
-  z-index: 1000;
-  width: 100%;
-  height: 5em;
-  text-align: center;
-  background-color: #f2f2f2;
-  padding: 1.5em; }
-
-.show {
-  display: inline; }
+#info-bar .modal-content .modal-header {
+  border-radius: .3em; }
 
 input[type=text] {
   -webkit-box-shadow: inset 0.0275em 0.0325em 0.4125em -0.045em rgba(0, 0, 0, 0.3);
