--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -45,19 +45,12 @@ h1 {
     }
 }
 
-.error {
-    position: absolute;
-    display: none;
-    z-index: 1000;
-    width: 100%;
-    height: 5em;
-    text-align: center;
-    background-color: lighten($main, $amount: 95%);
-    padding: 1.5em;
-}
-
-.show {
-    display: inline;
+#info-bar {
+    .modal-content {
+        .modal-header{
+            border-radius: .3em;
+        }
+    }
 }
 
 input[type=text] {
