--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,6 +6,11 @@ body {
   -ms-user-select: none;
   user-select: none; }
 
+:focus:not(:disabled):not(.disabled) {
+  -webkit-box-shadow: 0em 0em 0em 0.0625em #00bde8, 0em 0em 0em 0.1875em #00bde857;
+  box-shadow: 0em 0em 0em 0.0625em #00bde8, 0em 0em 0em 0.1875em #00bde857;
+  outline: none; }
+
 header {
   position: relative; }
 
@@ -24,8 +29,10 @@ h1 {
     width: 2.625em;
     height: 2.375em;
     background-color: rgba(0, 0, 0, 0.05); }
-    .navbar button:hover, .navbar button:focus {
-      background-color: rgba(0, 0, 0, 0.35); }
+    .navbar button:hover {
+      background-color: rgba(0, 0, 0, 0.15); }
+    .navbar button:active {
+      background-color: rgba(0, 0, 0, 0.2); }
   .navbar .navbar-collapse {
     width: 11em;
     -webkit-box-shadow: 0em 0em 0.5125em 0.125em rgba(0, 0, 0, 0.3);
@@ -45,6 +52,11 @@ input[type=text] {
   -webkit-box-shadow: inset 0.0275em 0.0325em 0.4125em -0.045em rgba(0, 0, 0, 0.3);
   box-shadow: inset 0.0275em 0.0325em 0.4125em -0.045em rgba(0, 0, 0, 0.3); }
 
+.form-control:focus {
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border-color: #ced4da; }
+
 .progress {
   height: 0.5em;
   -webkit-box-shadow: inset 0.0275em 0.0325em 0.4125em -0.045em rgba(0, 0, 0, 0.3);
@@ -53,6 +65,9 @@ input[type=text] {
 .btn:not(:disabled):not(.disabled) {
   -webkit-box-shadow: 0em 0em 0.1125em 0.025em rgba(0, 0, 0, 0.3);
   box-shadow: 0em 0em 0.1125em 0.025em rgba(0, 0, 0, 0.3); }
+  .btn:not(:disabled):not(.disabled):focus {
+    -webkit-box-shadow: 0em 0em 0em 0.0625em #00bde8, 0em 0em 0em 0.1875em #00bde857;
+    box-shadow: 0em 0em 0em 0.0625em #00bde8, 0em 0em 0em 0.1875em #00bde857; }
 
 ul > li {
   -webkit-transition-duration: 600ms;
