--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,6 +6,10 @@ body {
   -ms-user-select: none;
   user-select: none; }
 
+body.using-mouse :focus:not(:disabled):not(.disabled) {
+  -webkit-box-shadow: none;
+  box-shadow: none; }
+
 :focus:not(:disabled):not(.disabled) {
   -webkit-box-shadow: 0em 0em 0em 0.0625em #00bde8, 0em 0em 0em 0.1875em #00bde857;
   box-shadow: 0em 0em 0em 0.0625em #00bde8, 0em 0em 0em 0.1875em #00bde857;
