--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -28,7 +28,8 @@ h1 {
   position: absolute;
   top: 0.4em;
   right: 0;
-  z-index: 4; }
+  z-index: 4;
+  text-align: center; }
   .navbar button {
     width: 2.625em;
     height: 2.375em;
