--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -33,6 +33,7 @@ h1 {
     top: 0.4em;
     right: 0;
     z-index: 4;
+    text-align: center;
     button {
         width: 2.625em;
         height: 2.375em;
