color for custom checkbox

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -56,6 +56,11 @@ h1 {
                 word-break: break-word;
             }
         }
+    .custom-checkbox
+      .custom-control-input:checked
+      ~ .custom-control-label::before {
+      background-color: darken($color: $doneTask, $amount: 40%);
+    }
     }
 }
 
