--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,121 +1,124 @@
-@import 'colors';
-@import 'mixins';
+@import "colors";
+@import "mixins";
 
 body {
-    font-family: 'Open Sans', sans-serif;
-    background-color: $theme;
-    @include user-select;
+  font-family: "Open Sans", sans-serif;
+  background-color: $theme;
+  @include user-select;
 }
 
 body.using-mouse :focus:not(:disabled):not(.disabled) {
-    -webkit-box-shadow: none;
-            box-shadow: none;
-  }
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
 
 :focus:not(:disabled):not(.disabled) {
-    @include boxshadowFocus;
-    outline: none;
+  @include boxshadowFocus;
+  outline: none;
 }
 
 header {
-    position: relative;
+  position: relative;
 }
 
 h1 {
-    border-bottom: 4px solid $main;
-    min-height: 1.9em;
-    word-break: break-word;
-    text-shadow: 1.5px 1.3px 4px rgba(0,0,0,.3);
+  border-bottom: 4px solid $main;
+  min-height: 1.9em;
+  word-break: break-word;
+  text-shadow: 1.5px 1.3px 4px rgba(0, 0, 0, 0.3);
 }
 
 .navbar {
-    position: absolute;
-    top: 0.4em;
-    right: 0;
-    z-index: 4;
-    text-align: center;
-    button {
-        width: 2.625em;
-        height: 2.375em;
-        background-color: transparentize($main, $amount: .95);
-        &:hover {
-            background-color: transparentize($main, $amount: .85);
-        }
-        &:active {
-            background-color: transparentize($main, $amount: .80);
-        }
+  position: absolute;
+  top: 0.4em;
+  right: 0;
+  z-index: 4;
+  text-align: center;
+  button {
+    width: 2.625em;
+    height: 2.375em;
+    background-color: transparentize($main, $amount: 0.95);
+    &:hover {
+      background-color: transparentize($main, $amount: 0.85);
     }
-    .navbar-collapse {
-        width: 11em;
-        @include boxshadow($blur: 0.5125em, $spread: 0.125em);
-        .navbar-nav .dropdown-menu {
-            text-align: center;
-            @include boxshadowInset($horizontal: 0.0175em, $vertical: 0.0125em, $blur: 0.2125em);
-            li.dropdown-item {
-                white-space: normal;
-                word-break: break-word;
-            }
-        }
+    &:active {
+      background-color: transparentize($main, $amount: 0.8);
+    }
+  }
+  .navbar-collapse {
+    width: 11em;
+    @include boxshadow($blur: 0.5125em, $spread: 0.125em);
+    .navbar-nav .dropdown-menu {
+      text-align: center;
+      @include boxshadowInset(
+        $horizontal: 0.0175em,
+        $vertical: 0.0125em,
+        $blur: 0.2125em
+      );
+      li.dropdown-item {
+        white-space: normal;
+        word-break: break-word;
+      }
+    }
     .custom-checkbox
       .custom-control-input:checked
       ~ .custom-control-label::before {
       background-color: darken($color: $doneTask, $amount: 40%);
     }
-    }
+  }
 }
 
 #info-bar {
-    .modal-content {
-        .modal-header{
-            border-radius: .3em;
-        }
+  .modal-content {
+    .modal-header {
+      border-radius: 0.3em;
     }
+  }
 }
 
-input[type=text] {
-    @include boxshadowInset;
+input[type="text"] {
+  @include boxshadowInset;
 }
 
 .form-control:focus {
-    -webkit-box-shadow: none;
-            box-shadow: none;
-    border-color: rgb(206, 212, 218);
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  border-color: rgb(206, 212, 218);
 }
 
 .progress {
-    height: 0.5em;
-    @include boxshadowInset;
-
+  height: 0.5em;
+  @include boxshadowInset;
 }
 
 .btn:not(:disabled):not(.disabled) {
-    @include boxshadow;
-    &:focus {
-        @include boxshadowFocus;
-    }
+  @include boxshadow;
+  &:focus {
+    @include boxshadowFocus;
+  }
 }
 
 ul > li {
-    -webkit-transition-duration: 600ms;
-            transition-duration: 600ms;
-    p {
-        margin: 0;
-        word-break: break-word;
-    }
-    &.to-remove {
-        opacity: 0;
-    }
-    &.new-task {
-        opacity: 0; 
-    }
+  -webkit-transition-duration: 600ms;
+  transition-duration: 600ms;
+  p {
+    margin: 0;
+    word-break: break-word;
+  }
+  &.to-remove {
+    opacity: 0;
+  }
+  &.new-task {
+    opacity: 0;
+  }
 }
 
 .checked {
-    -webkit-text-decoration-line: line-through!important;
-            text-decoration-line: line-through!important;
-    color: lighten($main, 40%);
+  -webkit-text-decoration-line: line-through !important;
+  text-decoration-line: line-through !important;
+  color: lighten($main, 40%);
 }
 
 .checked-bg {
-    background-color: $doneTask;
+  background-color: $doneTask;
 }
