--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -122,3 +122,17 @@ ul > li {
 .checked-bg {
   background-color: $doneTask;
 }
+
+.edit{
+  background-color: transparent;
+  padding: 0;
+  border: none;
+  cursor: pointer;
+  margin-left: -0.4em;
+  text-shadow: 0 1px 0 #fff;
+  color: #808080;
+  transition-duration: 200ms;
+  &:hover{
+    color:black;
+  }
+}
