--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -83,7 +83,9 @@ ul > li {
   transition-duration: 600ms; }
   ul > li p {
     margin: 0;
-    word-break: break-word; }
+    word-break: break-word;
+    text-align: center;
+    padding: 0px 0.6em; }
   ul > li.to-remove {
     opacity: 0; }
   ul > li.new-task {
@@ -96,5 +98,17 @@ ul > li {
 
 .checked-bg {
   background-color: lightgreen; }
+
+.edit {
+  background-color: transparent;
+  padding: 0;
+  border: none;
+  cursor: pointer;
+  margin-left: -0.4em;
+  text-shadow: 0 1px 0 #fff;
+  color: #808080;
+  transition-duration: 200ms; }
+  .edit:hover {
+    color: black; }
 
 /*# sourceMappingURL=style.css.map */
